--- a/app/code/Magedelight/Bundlediscount/view/frontend/templates/bundle.phtml
+++ b/app/code/Magedelight/Bundlediscount/view/frontend/templates/bundle.phtml
@@ -63,9 +63,9 @@ $helper = $this->helper('Magedelight\Bundlediscount\Helper\Data');
                                         <div class="promotions-selections">
                                             <div class="promotions-selections-img tooltip<?= /* @noEscape */ $bundle->getId() ?>">
                                                 <a href="<?= /* @noEscape */ $bundle->getProductUrl() ?>" title="<?= /* @noEscape */ $bundle->getProductName() ?>">
-                                                    <img src="<?= /* @noEscape */ $bundle->getImageUrl() ?>" height="90" width="90" /></a>
+                                                    <img src="<?= /* @noEscape */ $bundle->getImageUrl() ?>" height="90" width="90" alt="<?= /* @noEscape */ $bundle->getProductSku() ?>"/></a>
                                                 <div class="promotions-qty"><span>X<?= /* @noEscape */ $bundle->getQty() ?></span></div>
-                                                <div class="tooltip-product-name" id="productNameTooltip<?= /* @noEscape */ $bundle->getId() ?>"><?= /* @noEscape */ $bundle->getProductName() ?></div>
+                                                <div class="tooltip-product-name" id="productNameTooltip<?= /* @noEscape */ $bundle->getId() ?>" title="<?= /* @noEscape */ $bundle->getProductName() ?>"><?= /* @noEscape */ $bundle->getProductName() ?></div>
                                                 <div class="toolprice">$<?php echo sprintf('%.2f',$bundle->getProductPrice());?></div>
                                                 <div class="check-configure" style="display: none;">
                                                  <input type="checkbox"  class="custom-check bundle_section_<?= /* @noEscape */ $bundle->getId() ?>" name="flexible_product" value="<?= /* @noEscape */ $bundle->getProductId() ?>" checked="">
@@ -73,7 +73,7 @@ $helper = $this->helper('Magedelight\Bundlediscount\Helper\Data');
                                                  </div>
                                             </div>
 
-                                            <div class="promotions-selections-plus"><img src="<?php echo $block->getViewFileUrl('images/union.png');?>"/></div>
+                                            <div class="promotions-selections-plus"><img src="<?php echo $block->getViewFileUrl('images/union.png');?>" alt="union"/></div>
                                             <?php $i = 1;?>
                                             <?php foreach ($_selections as $_selection):
                                                  $configureIds = $helper->loadConfigurableType($_selection->getData('product_id'));
@@ -83,14 +83,14 @@ $helper = $this->helper('Magedelight\Bundlediscount\Helper\Data');
                                                     if ($configureIds) {
                                                         $pid = $configureIds[0];
                                                         $purl = $helper->loadMyProductUrl($pid)->getProductUrl()?>
-                                                        <a href="<?= /* @noEscape */ $purl ?>" title="<?= /* @noEscape */ $_selection->getProductName() ?>">
-                                                            <img src="<?= /* @noEscape */ $_selection->getImageUrl() ?>" height="90" width="90" /></a>
+                                                        <a href="<?= /* @noEscape */ $purl ?>" title="<?= /* @noEscape */ $_selection->getName() ?>">
+                                                            <img src="<?= /* @noEscape */ $_selection->getImageUrl() ?>" height="90" width="90" alt="<?= /* @noEscape */ $_selection->getSku() ?>"/></a>
                                                     <?php } else { ?>
-                                                            <a href="<?= /* @noEscape */ $_selection->getProductUrl() ?>" title="<?= /* @noEscape */ $_selection->getProductName() ?>">
-                                                        <img src="<?= /* @noEscape */ $_selection->getImageUrl() ?>" height="90" width="90" /></a>
+                                                            <a href="<?= /* @noEscape */ $_selection->getProductUrl() ?>" title="<?= /* @noEscape */ $_selection->getName() ?>">
+                                                        <img src="<?= /* @noEscape */ $_selection->getImageUrl() ?>" height="90" width="90"  alt="<?= /* @noEscape */ $_selection->getSku() ?>"/></a>
                                                     <?php } ?>
                                                     <div class="promotions-qty"><span>X<?= /* @noEscape */ $_selection->getQty() ?></span></div>
-                                                    <div class="tooltip-product-name" id="productNameTooltip<?= /* @noEscape */ $_selection->getId() ?>"><?= /* @noEscape */ $_selection->getName() ?></div>
+                                                    <div class="tooltip-product-name" id="productNameTooltip<?= /* @noEscape */ $_selection->getId() ?>" title="<?= /* @noEscape */ $_selection->getName() ?>"><?= /* @noEscape */ $_selection->getName() ?></div>
                                                     <div class="toolprice">$<?php echo sprintf('%.2f',$_selection->getPrice());?></div>
                                                     <?php if ($bundle->getBundleOption() == 'Flexible'): ?>
                                                        <div class="check-configure">
@@ -112,7 +112,7 @@ $helper = $this->helper('Magedelight\Bundlediscount\Helper\Data');
                                                 </div>
 
                                                 <?php if ($i < $_selections->count()): ?>
-                                                    <div class="promotions-selections-plus"><img src="<?php echo $block->getViewFileUrl('images/union.png');?>"/></div>
+                                                    <div class="promotions-selections-plus"><img src="<?php echo $block->getViewFileUrl('images/union.png');?>" alt="union"/></div>
                                                     <?php $i++; ?>
                                                 <?php endif; ?>
                                             <?php endforeach; ?>
