修改调试了三端产品详情页的tab样式。

--- a/app/design/frontend/Codazon/fastest/hightech/Magento_Catalog/web/css/source/_module.less
+++ b/app/design/frontend/Codazon/fastest/hightech/Magento_Catalog/web/css/source/_module.less
@@ -202,7 +202,7 @@
         .abs-borderradius(@border-radius);
         border-width:0;
         border-top-width:1px;
-        padding: @indent__base;
+        padding: 10px @indent__base @indent__base @indent__base;
     }
     .product.media{
         .fotorama__stage__frame .fotorama__img{float:left}
