--- a/app/design/frontend/Codazon/fastest/hightech2/Magento_Catalog/web/css/source/_module.less
+++ b/app/design/frontend/Codazon/fastest/hightech2/Magento_Catalog/web/css/source/_module.less
@@ -1671,12 +1671,12 @@
 .product.data.items>.item.title>.switch{
     font-style: normal;
     font-weight: normal;
-    font-size: 16px;
-    line-height: 19px;
-    color: #666666;
-    padding: 20px  12px 10px 16px;
+    font-size: 14px !important;
+    line-height: 16px !important;
+    color: #a1a1a1;
+    padding: 20px 16px 12px 16px;
     height: unset;
-    font-family: 'roboto-medium';
+    font-family: 'roboto' !important;
 
 }
 .related .title{
@@ -1710,12 +1710,11 @@
      }
  }
 .product.data.items>.item.title:not(.disabled)>.switch:active, .product.data.items>.item.title.active>.switch, .product.data.items>.item.title.active>.switch:focus, .product.data.items>.item.title.active>.switch:hover{
-    font-style: normal;
-    font-weight: normal;
-    font-size: 16px;
-    line-height: 19px;
-    color: #333333;
-    font-family: 'roboto-medium';
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 16px;
+    color: #155da4;
+    font-family: 'roboto';
 }
 .product.data.items>.item.title>.switch, .tabs-list.product.data.items>.item.title>.switch{
     border: none !important;
@@ -1733,8 +1732,8 @@
     background: #155da4;
     height: 2px;
     position: absolute;
-    left: 5px;
-    bottom: 1px;
+    left: 0;
+    bottom: -1px;
     -moz-transform: scale(0, 0);
     -webkit-transform: scale(0, 0);
     -o-transform: scale(0, 0);
