--- a/app/design/frontend/Codazon/fastest/hightech2/Magento_Catalog/templates/product/list.phtml
+++ b/app/design/frontend/Codazon/fastest/hightech2/Magento_Catalog/templates/product/list.phtml
@@ -161,7 +161,11 @@ $filterHelper = $this->helper('Codazon\ProductFilter\Helper\Data');
                                 <?php /* @escapeNotVerified */ echo $_product->getCertifiedInfo(); ?>
                             </div>
 
-                            <div class="ruk_rating_snippet" data-sku="<?php echo $_product->getSku(); ?>"></div>
+                            <?php
+                                $ec_helper = $this->helper('\Ecopure\Catalog\Helper\Data');
+                                $ec_skus = $ec_helper->getProductSkus($_product);
+                            ?>
+                            <div class="ruk_rating_snippet" data-sku="<?php echo $block->escapeHtml($ec_skus); ?>"></div>
                             <?php /* @escapeNotVerified */ echo $block->getProductPrice($_product) ?>
 							<?php echo $block->getProductDetailsHtml($_product); ?>
 
