--- a/app/design/frontend/Codazon/fastest/hightech3/Codazon_ProductFilter/templates/grid_slider_2.phtml
+++ b/app/design/frontend/Codazon/fastest/hightech3/Codazon_ProductFilter/templates/grid_slider_2.phtml
@@ -142,7 +142,11 @@ $filterHelper = $this->helper('Codazon\ProductFilter\Helper\Data');
                                         <?php /* @escapeNotVerified */ echo $desc; ?>
                                     </div>
                                 <?php endif; ?>
-                                <div class="ruk_rating_snippet" data-sku="<?php echo $_product->getSku(); ?>"></div>
+                                <?php
+                                    $ec_helper = $this->helper('\Ecopure\Catalog\Helper\Data');
+                                    $ec_skus = $ec_helper->getProductSkus($_product);
+                                ?>
+                                <div class="ruk_rating_snippet" data-sku="<?php echo $block->escapeHtml($ec_skus); ?>"></div>
 								<?php if($block->isShow('price')): ?>
 				                <?php /* @escapeNotVerified */ echo $block->getProductPrice($_product) ?>
 				                <?php endif ?>
