--- a/app/design/frontend/Codazon/fastest/fashion/Codazon_ThemeOptions/web/css/product.css
+++ b/app/design/frontend/Codazon/fastest/fashion/Codazon_ThemeOptions/web/css/product.css
@@ -1093,11 +1093,14 @@
     margin: 0 auto;
     margin-bottom: 20px;
 }
-
+.a-product-block-videowithtexts .swiper-slide {
+    display: flex;
+    align-items: center;
+}
 .a-product-block-videowithtexts-texts {
     width: 50%;
     box-sizing: border-box;
-    padding: 48px 40px 0 40px;
+    padding:  0 40px;
     float: left;
 }
 
@@ -1129,9 +1132,9 @@
     -webkit-line-clamp: 8;
 }
 .a-product-block-videowithtexts-texts-note {
-    position: absolute;
-    bottom: 5px;
-    left: 0px;
+    /*position: absolute;*/
+    /*bottom: 5px;*/
+    /*left: 0px;*/
     font-family: 'Roboto-Regular';
     font-size: 14px;
     line-height: 150%;
