修复手机端页脚多出空白显示的问题。

--- a/app/design/frontend/Codazon/fastest/fashion/Codazon_ThemeOptions/web/css/product.css
+++ b/app/design/frontend/Codazon/fastest/fashion/Codazon_ThemeOptions/web/css/product.css
@@ -1505,3 +1505,11 @@
     .triangle1,.triangle2,.triangle3,.triangle4{border-width: 1.1719vw;}
 }
 /* end A+Style */
+
+/* Reviews IO */
+@media (max-width: 767px) {
+    #reviews-io-polaris-modal {
+        display: none;
+    }
+}
+/* end Reviews IO */
