--- a/app/design/frontend/Codazon/fastest/fashion/Codazon_ThemeOptions/web/css/product.css
+++ b/app/design/frontend/Codazon/fastest/fashion/Codazon_ThemeOptions/web/css/product.css
@@ -1216,8 +1216,7 @@
     .a-product-block-videowithtexts-texts {
         width: auto;
         float: none;
-        padding: 20px;
-        margin-top: 20px;
+        padding: 20px 20px 0 20px;
     }
 
     .a-product-block-videowithtexts .pcswiper {
@@ -1238,7 +1237,7 @@
         right: 10px;
         left: auto;
         position: absolute;
-        top: 50%;
+        top: 21%;
         width: calc(var(--swiper-navigation-size) / 44 * 27);
         height: var(--swiper-navigation-size);
         margin-top: -28px;
@@ -1250,7 +1249,7 @@
         left: 10px;
         right: auto;
         position: absolute;
-        top: 50%;
+        top: 21%;
         width: calc(var(--swiper-navigation-size) / 44 * 27);
         height: var(--swiper-navigation-size);
         margin-top: -28px;
@@ -1259,7 +1258,7 @@
 
     .a-product-block-videowithtexts .swiper-slide {
         align-items: center;
-        display: flex;
+        display: block;
         justify-content: center;
     }
 
@@ -1272,7 +1271,7 @@
 
     .a-product-block-videowithtexts .swiper-mobile .swiper-pagination2 {
         text-align: center;
-        margin-top: 10px;
+        margin-bottom: 20px;
     }
 
     .a-product-block-videowithtexts-texts p {
