--- a/app/design/frontend/Codazon/fastest/fashion/Codazon_ThemeOptions/web/css/product.css
+++ b/app/design/frontend/Codazon/fastest/fashion/Codazon_ThemeOptions/web/css/product.css
@@ -1117,6 +1117,7 @@
     line-height: 130%;
     color: #333333;
     margin-top: 8px;
+    margin-bottom: 10px;
 }
 
 .a-product-block-videowithtexts-texts p {
@@ -1216,7 +1217,7 @@
     .a-product-block-videowithtexts-texts {
         width: auto;
         float: none;
-        padding: 20px 20px 0 20px;
+        padding: 20px 20px 10px 20px;
     }
 
     .a-product-block-videowithtexts .pcswiper {
@@ -1237,7 +1238,7 @@
         right: 10px;
         left: auto;
         position: absolute;
-        top: 21%;
+        top: 23%;
         width: calc(var(--swiper-navigation-size) / 44 * 27);
         height: var(--swiper-navigation-size);
         margin-top: -28px;
@@ -1249,7 +1250,7 @@
         left: 10px;
         right: auto;
         position: absolute;
-        top: 21%;
+        top: 23%;
         width: calc(var(--swiper-navigation-size) / 44 * 27);
         height: var(--swiper-navigation-size);
         margin-top: -28px;
@@ -1271,7 +1272,7 @@
 
     .a-product-block-videowithtexts .swiper-mobile .swiper-pagination2 {
         text-align: center;
-        margin-bottom: 20px;
+        margin-bottom: 30px;
     }
 
     .a-product-block-videowithtexts-texts p {
