更换header横幅图片，并为横幅图片添加对应活动URL跳转。

--- a/app/design/frontend/Codazon/fastest/fashion/Magento_Theme/templates/html/header/campaigns.phtml
+++ b/app/design/frontend/Codazon/fastest/fashion/Magento_Theme/templates/html/header/campaigns.phtml
@@ -1,2 +1,3 @@
-<div class="header-campaigns">
-</div>
+<a href="https://www.water-filter.com/special-sale">
+    <div class="header-campaigns"></div>
+</a>
