--- a/app/design/frontend/Codazon/fastest/fashion/Magento_Theme/templates/html/header/campaigns.phtml
+++ b/app/design/frontend/Codazon/fastest/fashion/Magento_Theme/templates/html/header/campaigns.phtml
@@ -1,3 +1,3 @@
-<a href="https://www.water-filter.com/special-sale">
-    <div class="header-campaigns"></div>
-</a>
+<!--<a href="https://www.water-filter.com/special-sale">-->
+<!--    <div class="header-campaigns"></div>-->
+<!--</a>-->
